--- a/YSLive/Info.plist
+++ b/YSLive/Info.plist
@@ -17,7 +17,7 @@
 		<string>zh_TW</string>
 	</array>
 	<key>CFBundleName</key>
-	<string>云枢迅联</string>
+	<string>网宿云课堂</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -85,6 +85,6 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 	<key>YSAppCommitVersion</key>
-	<string>2020021700</string>
+	<string>2020021702</string>
 </dict>
 </plist>
