--- a/YSLive/vclass_Info.plist
+++ b/YSLive/vclass_Info.plist
@@ -17,7 +17,7 @@
 		<string>zh_TW</string>
 	</array>
 	<key>CFBundleName</key>
-	<string>云枢迅联</string>
+	<string>网宿云课堂</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
