--- a/YSLiveSample/YSLiveSample/Info.plist
+++ b/YSLiveSample/YSLiveSample/Info.plist
@@ -27,27 +27,22 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>房间中需要进行视频通话以及拍摄您是否允许打开相机</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>房间中需要通过您的地理位置信息获取您周边的位置相关数据您是否允许开启位置</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>房间中需要发送语音消息及发言您是否允许打开麦克风</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>房间中需要上传图片您是否允许添加图片</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>房间中需要选择本地图片您是否允许访问相册</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
-	<key>UIRequiresFullScreen</key>
-	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
