--- a/YSLiveSample/YSLiveSample/Info.plist
+++ b/YSLiveSample/YSLiveSample/Info.plist
@@ -39,6 +39,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
