--- a/YSSkinManager/YSSkinRsource.bundle/OriginalColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/OriginalColor.plist
@@ -7,16 +7,18 @@
 		<key>blackColor </key>
 		<string>#000000</string>
 		<key>defaultTitleColor</key>
-		<string>#ffffff</string>
+		<string>#FFE895</string>
 		<key>defaultBgColor</key>
-		<string>#24262C</string>
+		<string>#9DBEF3</string>
 		<key>WhiteBoardBgColor</key>
 		<string>#2E3037</string>
 		<key>PopViewBgColor</key>
-		<string>#212121</string>
+		<string>#336CC7</string>
 		<key>ToolBgColor</key>
 		<string>#1C1D20</string>
 	</dict>
+	<key>CommonImage</key>
+	<dict/>
 	<key>barScaleBtn</key>
 	<dict>
 		<key>tittleColor</key>
