--- a/YSSkinManager/YSSkinRsource.bundle/OriginalColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/OriginalColor.plist
@@ -26,9 +26,9 @@
 		<key>bgColor</key>
 		<string></string>
 		<key>iconNor</key>
-		<string>studentNormalHand</string>
+		<string>barScale_normal_skin</string>
 		<key>iconSel</key>
-		<string>videlHand</string>
+		<string>barScale_selected_skin</string>
 	</dict>
 </dict>
 </plist>
