--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -556,5 +556,96 @@
 		<key>iconDis</key>
 		<string>coursewareList_play_dis_skin</string>
 	</dict>
+	<key>brushTool_open</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_open_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_open_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_open_dis_skin</string>
+	</dict>
+	<key>brushTool_mouse</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_mouse_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_mouse_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_mouse_dis_skin</string>
+	</dict>
+	<key>brushTool_pen</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_pen_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_pen_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_pen_dis_skin</string>
+	</dict>
+	<key>brushTool_text</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_text_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_text_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_text_dis_skin</string>
+	</dict>
+	<key>brushTool_shape</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_shape_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_shape_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_shape_dis_skin</string>
+	</dict>
+	<key>brushTool_eraser</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_eraser_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_eraser_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_eraser_dis_skin</string>
+	</dict>
+	<key>brushTool_clear</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_clear_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_clear_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_clear_dis_skin</string>
+	</dict>
 </dict>
 </plist>
