画笔工具 颜色 轮廓 大小

--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -647,5 +647,122 @@
 		<key>iconDis</key>
 		<string>brushTool_clear_dis_skin</string>
 	</dict>
+	<key>brushTool_drawpen</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_drawpen_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_drawpen_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_drawpen_dis_skin</string>
+	</dict>
+	<key>brushTool_markpen</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_markpen_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_markpen_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_markpen_dis_skin</string>
+	</dict>
+	<key>brushTool_line</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_line_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_line_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_line_dis_skin</string>
+	</dict>
+	<key>brushTool_arrowline</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_arrowline_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_arrowline_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_arrowline_dis_skin</string>
+	</dict>
+	<key>brushTool_emptyrectangle</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_emptyrectangle_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_emptyrectangle_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_emptyrectangle_dis_skin</string>
+	</dict>
+	<key>brushTool_filledrectangle</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_filledrectangle_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_filledrectangle_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_filledrectangle_dis_skin</string>
+	</dict>
+	<key>brushTool_emptyellipse</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_emptyellipse_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_emptyellipse_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_emptyellipse_dis_skin</string>
+	</dict>
+	<key>brushTool_filledellipse</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>brushTool_filledellipse_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_filledellipse_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_filledellipse_dis_skin</string>
+	</dict>
+	<key>brushTool_slider</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string>#DEEAFF</string>
+		<key>iconNor</key>
+		<string>brushTool_slider_nor_skin</string>
+		<key>iconSel</key>
+		<string>brushTool_slider_sel_skin</string>
+		<key>iconDis</key>
+		<string>brushTool_slider_dis_skin</string>
+	</dict>
 </dict>
 </plist>
