--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -38,6 +38,10 @@
 		<string>#66676B</string>
 		<key>jurisdictionCheckFail</key>
 		<string>#FF7D7D</string>
+		<key>liveDefaultBgColor</key>
+		<string>#F1F6FF</string>
+		<key>liveTimeTextColor</key>
+		<string>#818181</string>
 	</dict>
 	<key>CommonImage</key>
 	<dict>
@@ -1181,6 +1185,58 @@
 		<string>responder_upPlatform_sel_skin</string>
 		<key>iconDis</key>
 		<string>responder_upPlatform_dis_skin</string>
+	</dict>
+	<key>live_lesson_header</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_lesson_header_nor_skin</string>
+		<key>iconSel</key>
+		<string>live_lesson_header_sel_skin</string>
+		<key>iconDis</key>
+		<string>live_lesson_header_dis_skin</string>
+	</dict>
+	<key>live_lesson_translat</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_lesson_translat_nor_skin</string>
+		<key>iconSel</key>
+		<string>live_lesson_translat_sel_skin</string>
+		<key>iconDis</key>
+		<string>live_lesson_translat_dis_skin</string>
+	</dict>
+	<key>live_lesson_message</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_lesson_message_nor_skin</string>
+		<key>iconSel</key>
+		<string>live_lesson_message_sel_skin</string>
+		<key>iconDis</key>
+		<string>live_lesson_message_dis_skin</string>
+	</dict>
+	<key>live_lesson_status</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_lesson_status_nor_skin</string>
+		<key>iconSel</key>
+		<string>live_lesson_status_sel_skin</string>
+		<key>iconDis</key>
+		<string>live_lesson_status_dis_skin</string>
 	</dict>
 </dict>
 </plist>
