--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -1238,5 +1238,44 @@
 		<key>iconDis</key>
 		<string>live_lesson_status_dis_skin</string>
 	</dict>
+	<key>live_lesson_barrage</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_lesson_barrage_nor_skin</string>
+		<key>iconSel</key>
+		<string>live_lesson_barrage_sel_skin</string>
+		<key>iconDis</key>
+		<string>live_lesson_barrage_dis_skin</string>
+	</dict>
+	<key>live_lesson_full</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_lesson_full_nor_skin</string>
+		<key>iconSel</key>
+		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
+	<key>live_lesson_return</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_lesson_return_nor_skin</string>
+		<key>iconSel</key>
+		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
 </dict>
 </plist>
