--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -1277,5 +1277,31 @@
 		<key>iconDis</key>
 		<string></string>
 	</dict>
+	<key>live_prizeAlert_waiting</key>
+	<dict>
+		<key>tittleColor</key>
+		<string>#FFE895</string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_prizeAlert_waiting_nor_skin</string>
+		<key>iconSel</key>
+		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
+	<key>live_prizeAlert_result</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_prizeAlert_result_nor_skin</string>
+		<key>iconSel</key>
+		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
 </dict>
 </plist>
