直播的私聊名单和 聊天页面部分更改

--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -42,6 +42,8 @@
 		<string>#F1F6FF</string>
 		<key>liveTimeTextColor</key>
 		<string>#818181</string>
+		<key>liveChatBgColor</key>
+		<string>#F6F8FA</string>
 	</dict>
 	<key>CommonImage</key>
 	<dict>
