ZHIBOXBK-1000 1v1单课件：PC老师打开双师布局，然后恢复到正常界面，视频右边出现了一个白条，刘海屏必现

--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CommonColor</key>
 	<dict>
+		<key>noVideoMaskBgColor</key>
+		<string>#40424A</string>
 		<key>timer_timeBgColor</key>
 		<string>#DEEAFF</string>
 		<key>placeholderColor</key>
