直播投票页

--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -46,6 +46,8 @@
 		<string>#818181</string>
 		<key>liveChatBgColor</key>
 		<string>#F6F8FA</string>
+		<key>liveVoteNameTextColor</key>
+		<string>#5A8CDC</string>
 	</dict>
 	<key>CommonImage</key>
 	<dict>
@@ -1352,13 +1354,65 @@
 	<key>live_prizeAlert_close</key>
 	<dict>
 		<key>tittleColor</key>
-		<string>#FFE895</string>
+		<string></string>
 		<key>bgColor</key>
 		<string></string>
 		<key>iconNor</key>
 		<string>live_prizeAlert_close_nor_skin</string>
 		<key>iconSel</key>
 		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
+	<key>live_vote_topback</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_vote_topback_nor_skin</string>
+		<key>iconSel</key>
+		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
+	<key>live_vote_end</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_vote_end_nor_skin</string>
+		<key>iconSel</key>
+		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
+	<key>live_vote_ing</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_vote_ing_nor_skin</string>
+		<key>iconSel</key>
+		<string></string>
+		<key>iconDis</key>
+		<string></string>
+	</dict>
+	<key>live_vote_single</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>live_vote_single_nor_skin</string>
+		<key>iconSel</key>
+		<string>live_vote_single_sel_skin</string>
 		<key>iconDis</key>
 		<string></string>
 	</dict>
