--- a/YSLib/YSWhiteBoard/YSWhiteBoardSkin.bundle/blackColor.plist
+++ b/YSLib/YSWhiteBoard/YSWhiteBoardSkin.bundle/blackColor.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CommonColor</key>
 	<dict>
+		<key>mediaSliderBgColor</key>
+		<string>#545454</string>
 		<key>placeholderColor</key>
 		<string>#828282</string>
 		<key>lineColor</key>
@@ -188,6 +190,24 @@
 		<string></string>
 		<key>iconNor</key>
 		<string>topBar_minimize_skin</string>
+		<key>iconSel</key>
+		<string></string>
+	</dict>
+	<key>media_play</key>
+	<dict>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>wb_media_play_nor_skin</string>
+		<key>iconSel</key>
+		<string>wb_media_play_sel_skin</string>
+	</dict>
+	<key>media_slider</key>
+	<dict>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>wb_media_slider_nor_skin</string>
 		<key>iconSel</key>
 		<string></string>
 	</dict>
