--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -1685,5 +1685,12 @@
 		<key>animation4</key>
 		<string>permissions_animation4_skin</string>
 	</dict>
+	<key>passwordAlert</key>
+	<dict>
+		<key>iconNor</key>
+		<string>passwordAlert_nolook</string>
+		<key>iconSel</key>
+		<string>passwordAlert_look</string>
+	</dict>
 </dict>
 </plist>
